--- a/index.html
+++ b/index.html
@@ -168,18 +168,30 @@
   </div>
 
   <div class="gallery" id="gallery">
-    <img src="https://placekitten.com/400/300" alt="AI Cat">
-    <img src="https://placebear.com/400/400" alt="AI Bear">
-    <img src="https://www.fillmurray.com/400/300" alt="Bill Meme">
-    <img src="https://baconmockup.com/400/300" alt="Bacon Art">
-    <img src="https://placebeard.it/400x300" alt="Beard Lord">
-    <img src="https://stevensegallery.com/400/300" alt="Segal Supreme">
-  </div>
+  <img src="https://i.ibb.co/8nMXnQyD/8bit-Abduction.webp" alt="8bit Abduction">
+  <img src="https://i.ibb.co/6JvK65tk/Fast-NFurious-Paper-Edition.webp" alt="Fast N Furious Paper Edition">
+  <img src="https://i.ibb.co/FktDFMDT/16bit-Abduction.webp" alt="16bit Abduction">
+  <img src="https://i.ibb.co/ksR1TGYR/weareallone.webp" alt="We Are All One">
+  <img src="https://i.ibb.co/67gJL4M2/Cra-Ve-Rice-Bowls.webp" alt="Cra-Ve Rice Bowls">
+  <img src="https://i.ibb.co/HTTJZY3y/beammoo.webp" alt="Beammoo">
+  <img src="https://i.ibb.co/hRTTf62q/Groundbase.webp" alt="Groundbase">
+  <img src="https://i.ibb.co/G44dZdD0/jelli.webp" alt="Jelli">
+  <img src="https://i.ibb.co/mV5N7WXP/Heavy-Future.webp" alt="Heavy Future">
+  <img src="https://i.ibb.co/5hxxVnLr/Rigid-Boring-Adults.webp" alt="Rigid Boring Adults">
+  <img src="https://i.ibb.co/vxy0Cd8h/Silly-Goose-SEO.webp" alt="Silly Goose SEO">
+  <img src="https://i.ibb.co/fdv2TwnV/AETHER.webp" alt="AETHER">
+  <img src="https://i.ibb.co/mV50wnZJ/chrome-promptverse.webp" alt="Chrome Promptverse">
+  <img src="https://i.ibb.co/vC2PF8jy/outdoor-icons.webp" alt="Outdoor Icons">
+  <img src="https://i.ibb.co/230W0r3H/churchtype.webp" alt="Churchtype">
+  <img src="https://i.ibb.co/r2fvS51Y/distortedglitch.webp" alt="Distorted Glitch">
+  <img src="https://i.ibb.co/0p1Tc6xm/Mumblelogo.webp" alt="Mumble Logo">
+</div>
+
 
   <button class="randomize-btn" onclick="randomizeImages()">🎲</button>
 
   <footer>
-    © 2025 GlitchBarn. All glitches preserved. No refunds. | <a href="#" onclick="revealHidden()">Behind the Dumpster 🔥</a>
+    © 2025 TheDumbster. All glitches preserved. No refunds. | <a href="#" onclick="revealHidden()">Behind the Dumpster 🔥</a>
   </footer>
 
   <div id="hiddenPage" class="hidden-page">
