--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GlitchBarn - The AI Dumpster</title>
+  <title>theDumbster - My AI Generated Art Gallery</title>
   <style>
     body, html {
       margin: 0;
@@ -191,7 +191,7 @@
   <button class="randomize-btn" onclick="randomizeImages()">🎲</button>
 
   <footer>
-    © 2025 TheDumbster. All glitches preserved. No refunds. | <a href="#" onclick="revealHidden()">Behind the Dumpster 🔥</a>
+    © 2025 TheDumbster. All Art Generated. No Care Here. | <a href="#" onclick="revealHidden()">Behind the Dumpster 🔥</a>
   </footer>
 
   <div id="hiddenPage" class="hidden-page">
